<resources>
    <string name="app_name">SubmissionAplikasiStoryApp</string>

    <string name="logout">Logout</string>
    <string name="title_welcome_page">Selamat datang di Story App</string>
    <string name="message_welcome_page">Jelajahi dunia imajinatif tanpa batas dengan Story App. Nikmati kisah menarik dari berbagai genre, interaksi unik, akses premium. Temukan petualangan di setiap sentuhan!</string>
    <string name="signup">Sign Up</string>
    <string name="login">Login</string>

    <string name="create_account_page">Buat baru di sini?</string>
    <string name="title_login_page">Selamat Datang Kembali</string>
    <string name="message_login_page">Masukan datamu dulu untuk login ke akun Anda</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="title_signup_page">Buat Akun</string>
    <string name="name">Nama</string>
    <string name="message_signup_page">Dengan menggunakan layanan kami. Anda menyetujui Persyaratan dan Pernyataan Privasi</string>

    <string name="title_home_stories">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_setting">Setting</string>
    <string name="content_description_home">Home</string>


    <string name="storyImage">image %s</string>
    <string name="storyName">name %s</string>
    <string name="storyDate">date %s</string>
    <string name="storyDescription">desc %s</string>

    <string name="background">Background</string>
    <string name="profile_name">Kus Andi Priyono</string>
    <string name="profile_email">andipriyono94@gmail.com</string>
    <string name="account_github">github.com/KusAndiPriyono</string>
    <string name="log_out">Logut</string>
    <string name="camera">Camera</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="gallery">Gallery</string>
    <string name="image_detail">Image Detail</string>

    <string name="error_password_length">Password tidak boleh kurang dari 8 karakter</string>
    <string name="error_email_empty">Email tidak boleh kosong</string>
    <string name="error_email_format">Format email tidak sesuai</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="error_parsing_style">Style parsing failed.</string>
    <string name="error_find_style">Can\'t find style. Error</string>
    <string name="include_location">Include Location</string>
    <string name="retry">Coba Lagi</string>
    <string name="error_name">Masukkan Nama</string>
    <string name="title_map">Google Maps</string>

    <string name="capture_image">Capture Image</string>
    <string name="switch_camera">Switch Camera</string>

</resources>