<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_home"
        android:contentDescription="@string/content_description_home"
        android:icon="@drawable/ic_home_24"
        android:title="@string/title_home_stories"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/app_bar_profile"
        android:icon="@drawable/ic_person_24"
        android:title="@string/title_profile"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_maps"
        android:icon="@drawable/google_maps"
        android:title="@string/title_maps"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/log_out"
        app:showAsAction="never" />

</menu>