<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.createstory.CreateStoryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_create_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionEditTextLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/description"
            app:layout_constraintBottom_toTopOf="@+id/btn_add"
            app:layout_constraintEnd_toEndOf="@+id/btn_add"
            app:layout_constraintStart_toStartOf="@+id/btn_add"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera">

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:ems="10"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_add"
            android:layout_width="0dp"
            android:layout_height="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/upload"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditTextLayout" />

        <ImageView
            android:id="@+id/iv_preview_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_image_24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.45"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/camera"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_gallery"
            app:layout_constraintStart_toStartOf="@+id/descriptionEditTextLayout"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/gallery"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/descriptionEditTextLayout"
            app:layout_constraintStart_toEndOf="@+id/btn_camera"
            app:layout_constraintTop_toBottomOf="@id/guidelineHorizontal" />

        <ProgressBar
            android:id="@+id/progressBarCreateStory"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>